--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-html{
+body, html {
+  overflow-y: overlay;
+  overflow-x: overlay;
   width: 100%;
   height: 100%;
 }
 
 body{
   margin: 0;
-  width: 100%;
-  height: 100%;
 }
 
 #loading-screen{
