--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,11 +20,17 @@
     margin: auto;
 }
 
-/* FANCY INTRODUCTION TEXT */
-#intro-text
-{
+#intro-text{
     text-align: center;
     margin: auto;
     font-family: BN-titling;
-    width: 300px;
+}
+
+
+
+@media only screen and (max-width: 313px){
+    #profile-picture-bottom{
+        width:200px;
+        height: 200px;
+    }
 }
